--- a/templates/index.html
+++ b/templates/index.html
@@ -97,30 +97,19 @@
         {% if forecast %}
             <div class="forecast">
                 <h2>Current Forecast for {{ forecast.city }}, {{ forecast.state }} (zipcode {{ zipcode }}):</h2>
-                <div class="card {% if forecast.SNOW > 0.1 or forecast.PRCP > 0.1 %}snowy{% endif %}">
-                    <i class="wi {% if forecast.TMAX > 30 %}wi-day-sunny{% elif forecast.PRCP > 0.1 %}wi-rain{% elif forecast.SNOW > 0.1 %}wi-snow{% elif forecast.AWND > 10 %}wi-cloudy-windy{% else %}wi-cloudy{% endif %}"></i>
                     <div class="details">
                         <h3>Temperature</h3>
                         <p><strong>TMAX:</strong> {{ forecast.TMAX }} °F</p>
                         <p><strong>TMIN:</strong> {{ forecast.TMIN }} °F</p>
                     </div>
                 </div>
-                <div class="card {% if forecast.PRCP > 0.1 %}rainy{% endif %}">
-                    <i class="wi {% if forecast.PRCP > 0.1 %}wi-rain{% else %}wi-raindrop{% endif %}"></i>
-                    <div class="details">
-                        <h3>Precipitation</h3>
-                        <p><strong>PRCP:</strong> {{ forecast.PRCP }} inches</p>
-                    </div>
-                </div>
-                <div class="card {% if forecast.SNOW > 0.1 %}snowy{% endif %}">
-                    <i class="wi {% if forecast.SNOW > 0.1 %}wi-snow{% else %}wi-snowflake-cold{% endif %}"></i>
+                <div class="card">
                     <div class="details">
                         <h3>Snow</h3>
                         <p><strong>SNOW:</strong> {{ forecast.SNOW }} inches</p>
                     </div>
                 </div>
-                <div class="card {% if forecast.AWND > 10 %}windy{% endif %}">
-                    <i class="wi {% if forecast.AWND > 10 %}wi-cloudy-windy{% else %}wi-cloudy{% endif %}"></i>
+                <div class="card">
                     <div class="details">
                         <h3>Wind</h3>
                         <p><strong>AWND:</strong> {{ forecast.AWND }} mph</p>
